#
# This file is a part of the NsCDE - Not so Common Desktop Environment
# Author: Hegel3DReloaded
# Licence: GPLv3
#

modulesdir = $(NSCDE_LIBDIR)/fvwm-modules
modules_SCRIPTS = FvwmScript

EXTRA_SCRIPTS =

clean-local:
	-rm -f FvwmScript

uninstall-am:
	rm -f $(DESTDIR)$(NSCDE_LIBDIR)/fvwm-modules/FvwmScript
	rmdir $(DESTDIR)$(NSCDE_LIBDIR)/fvwm-modules
