#
# This file is a part of the NsCDE - Not so Common Desktop Environment
# Author: Hegel3DReloaded
# Licence: GPLv3
#

pythonlibdir = $(NSCDE_LIBDIR)/python
pythonlib_SCRIPTS = Globals.py MiscFun.py MotifColors.py Opts.py SpritesGtk2.py ThemeGtk.py Theme.py

EXTRA_SCRIPTS =

clean-local:
	-rm -f Globals.py MiscFun.py MotifColors.py Opts.py ThemeGtk.py Theme.py

