#
# This file is a part of the NsCDE - Not so Common Desktop Environment
# Author: Hegel3DReloaded
# Licence: GPLv3
#

nscdescriptdir = $(NSCDE_LIBDIR)/scripts

DYNSCRIPTS = BackdropMgr ColorMgr ExecDialog FontMgr PowerSaveMgr \
	SubpanelSettings Sysinfo KeyboardMgr PointerMgr

FVWMSCRIPTS = ActionForm BackdropMgr BeepMgr CheckMailApplet ChoiceForm \
	ColorMgr ExecDialog FilePicker FontMgr FpLite GeometryMgr \
	GWMOptions InputForm KeyboardMgr ModifyColor MonthDayApplet \
	NColorsDialog NProcMgr Occupy PaletteDialog \
	PowerSaveMgr StyleMgr SubpanelMgr SubpanelSettings \
	SysActionDialog Sysinfo WaitNotice WindowMgr WSM WSM-2 WSM-4 \
	WSM-6 WSM-8 WsPgMgr FpIconMgr ColorIntegrationDialog \
	FontIntegrationDialog

nscdescript_DATA = $(FVWMSCRIPTS)

EXTRA_DATA =

clean-local:
	-rm -f $(DYNSCRIPTS)

